--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ primary: '#F05F40'
 dark: '#222'
 
 # Contact details
-email: info@yiaki.jp
+email: business@yiaki.jp
 telephone_number: 
 whatsapp_number: 
 twitter_username:
